--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="{% url 'add' %}">Añadir</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="{% url 'visualize' %}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Productos
                     </a>
                     <ul class="dropdown-menu">
@@ -41,7 +41,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="{% url 'visualize' %}">Nosotros</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact_btn">Contacto</a>
@@ -129,12 +129,36 @@
         </div>
         {% endblock %}
     </main>
-    <footer>
-        <img src="{% static 'img/index/ig.png' %}" alt="Instagram">
-        <img src="{% static 'img/index/facebook.png' %}" alt="Facebook">
-        <img src="{% static 'img/index/whatsapp.png' %}" alt="WhatsApp">
-        <img src="{% static 'img/index/gorjeo.png' %}" alt="Twitter">
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-column">
+                <h4>Contacto</h4>
+                <p>Tel: +54 9 11 1234 5678</p>
+                <p>Email: contacto@libreria.com</p>
+            </div>
+            <div class="footer-column">
+                <h4>Enlaces útiles</h4>
+                <ul>
+                    <li><a href="#nosotros">Nosotros</a></li>
+                    <li><a href="#productos">Productos</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Redes Sociales</h4>
+                <div class="social-icons">
+                    <a href="#"><img src="{% static 'img/index/ig.png' %}" alt="Instagram"></a>
+                    <a href="#"><img src="{% static 'img/index/facebook.png' %}" alt="Facebook"></a>
+                    <a href="#"><img src="{% static 'img/index/whatsapp.png' %}" alt="WhatsApp"></a>
+                    <a href="#"><img src="{% static 'img/index/gorjeo.png' %}" alt="Twitter"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Librería. Todos los derechos reservados.</p>
+        </div>
     </footer>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
