--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <header>
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}">
-                    <img src="{% static 'img/index/logo.png' %}" alt="Logo" class="logotipo">
+                    <img src="{% static 'img/logo.png' %}" alt="Logo" class="logotipo">
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,72 +52,75 @@
               </div>
             </div>
           </nav>          
+
+          
+        <section class="banner">
+            {% block banner %}
+            <div class="banner_content">
+                <img src="{% static 'img/banner.png' %}" alt="Banner" class="banner_image">
+                <div class="banner_text">
+                    <h2 class="banner_title">Un nuevo libro, una nueva aventura.</h2>
+                    <p class="banner_subtitle">Explora nuestra colección y encuentra historias que inspiran, enseñan y transportan a mundos increíbles.</p>
+                </div>
+            </div>
+            {% endblock %}
+        </section>    
     </header>
-    <section class="banner">
-        {% block banner %}
-        <img src="{% static 'img/banner/banner_image.jpg' %}" alt="Banner" class="banner_image">
-        {% endblock %}
-    </section>
+
+    
+    <!-- Main content -->
+
     <main class="main_content">
         {% block content %}
+
         <div class="intro_section">
-            <img src="{% static 'img/index/store.png' %}" alt="Store">
+            <div class="separator"></div>
             <article class="store_info">
                 <h2>Bienvenido a Nuestra Librería</h2>
                 <p>Descubre una gran variedad de libros en diferentes géneros y de varios autores. Ofrecemos una
                     selección única para satisfacer el gusto de cada lector. ¡Explora nuestra colección y encuentra tu
                     próximo libro favorito!</p>
-                <h4>Nuestra Misión</h4>
-                <p>Nuestra misión es llevar la alegría de la lectura a todos. Desde los más vendidos hasta los libros 
-                    raros, tenemos algo para cada amante de la lectura.</p>
             </article>
         </div>
 
-        <div class="book_cards">
-            <div class="book_card">
-                <div class="book_card-inner">
-                    <div class="book_card-front">
-                        <img src="{% static 'img/books/genre1.jpg' %}" alt="Género 1">
-                    </div>
-                    <div class="book_card-back">
-                        Descubre nuestra selección de novelas de misterio apasionantes. Perfectas para quienes disfrutan
-                        del suspenso y la intriga.
-                    </div>
-                </div>
-            </div>
-            <div class="book_card">
-                <div class="book_card-inner">
-                    <div class="book_card-front">
-                        <img src="{% static 'img/books/genre2.jpg' %}" alt="Género 2">
-                    </div>
-                    <div class="book_card-back">
-                        Sumérgete en nuestra colección de libros de ciencia ficción. Explora nuevos mundos y aventuras
-                        futuristas.
-                    </div>
-                </div>
-            </div>
-            <div class="book_card">
-                <div class="book_card-inner">
-                    <div class="book_card-front">
-                        <img src="{% static 'img/books/genre3.jpg' %}" alt="Género 3">
-                    </div>
-                    <div class="book_card-back">
-                        Disfruta de historias conmovedoras de nuestro género de romance. Ideal para aquellos que aman
-                        los finales felices.
-                    </div>
-                </div>
-            </div>
-            <div class="book_card">
-                <div class="book_card-inner">
-                    <div class="book_card-front">
-                        <img src="{% static 'img/books/genre4.jpg' %}" alt="Género 4">
-                    </div>
-                    <div class="book_card-back">
-                        Aprende con nuestra extensa colección de libros educativos, que abarcan una amplia gama de temas.
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Genres -->
+
+        <div class="genre-circles">
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_romance.jpg' %}" alt="Romance">
+                <p>Romance</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_fantasy.jpg' %}" alt="Fantasía">
+                <p>Fantasía</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_scifi.jpg' %}" alt="Ciencia Ficción">
+                <p>Ciencia Ficción</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_mystery.jpg' %}" alt="Misterio">
+                <p>Misterio</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_young_adult.jpg' %}" alt="Literatura Juvenil">
+                <p>Literatura Juvenil</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_history.jpg' %}" alt="Historia">
+                <p>Historia</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_kids.jpg' %}" alt="Infantil">
+                <p>Infantil</p>
+            </a>
+            <a href="" class="genre-circle">
+                <img src="{% static 'img/books/genre_psychology.jpg' %}" alt="Psicología">
+                <p>Psicología</p>
+            </a>
+        </div>        
+        
+        <!-- Books -->
         
         <div class="products_section">
             {% for book in books %}
@@ -131,6 +134,9 @@
         </div>
         {% endblock %}
     </main>
+
+    <!-- Footer -->
+
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
