--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -35,11 +35,14 @@
                       Productos
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="">Ficción</a></li>
-                      <li><a class="dropdown-item" href="">No Ficción</a></li>
-                      <li><a class="dropdown-item" href="">Infantiles</a></li>
-                      <li><a class="dropdown-item" href="">Ciencia</a></li>
+                      <li><a class="dropdown-item" href="">Romance</a></li>
+                      <li><a class="dropdown-item" href="">Fantasía</a></li>
+                      <li><a class="dropdown-item" href="">Ciencia Ficción</a></li>
+                      <li><a class="dropdown-item" href="">Misterio</a></li>
+                      <li><a class="dropdown-item" href="">Literatura Juvenil</a></li>
                       <li><a class="dropdown-item" href="">Historia</a></li>
+                      <li><a class="dropdown-item" href="">Literatura Infantil</a></li>
+                      <li><a class="dropdown-item" href="">Psicología</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -87,35 +90,35 @@
 
         <div class="genre-circles">
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_romance.jpg' %}" alt="Romance">
+                <img src="{% static 'img/categories/Romance.jpg' %}" alt="Romance">
                 <p>Romance</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_fantasy.jpg' %}" alt="Fantasía">
+                <img src="{% static 'img/categories/Fantasía.jpg' %}" alt="Fantasía">
                 <p>Fantasía</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_scifi.jpg' %}" alt="Ciencia Ficción">
+                <img src="{% static 'img/categories/Ciencia Ficción.jpg' %}" alt="Ciencia Ficción">
                 <p>Ciencia Ficción</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_mystery.jpg' %}" alt="Misterio">
+                <img src="{% static 'img/categories/Misterio.jpg' %}" alt="Misterio">
                 <p>Misterio</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_young_adult.jpg' %}" alt="Literatura Juvenil">
+                <img src="{% static 'img/categories/Literatura juvenil 2.png' %}" alt="Literatura Juvenil">
                 <p>Literatura Juvenil</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_history.jpg' %}" alt="Historia">
+                <img src="{% static 'img/categories/Historia.jpg' %}" alt="Historia">
                 <p>Historia</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_kids.jpg' %}" alt="Infantil">
-                <p>Infantil</p>
+                <img src="{% static 'img/categories/Infantil.jpg' %}" alt="Infantil">
+                <p>Literatura Infantil</p>
             </a>
             <a href="" class="genre-circle">
-                <img src="{% static 'img/books/genre_psychology.jpg' %}" alt="Psicología">
+                <img src="{% static 'img/categories/Psicología.jpg' %}" alt="Psicología">
                 <p>Psicología</p>
             </a>
         </div>        
@@ -155,10 +158,10 @@
             <div class="footer-column">
                 <h4>Redes Sociales</h4>
                 <div class="social-icons">
-                    <a href="#"><img src="{% static 'img/index/ig.png' %}" alt="Instagram"></a>
-                    <a href="#"><img src="{% static 'img/index/facebook.png' %}" alt="Facebook"></a>
-                    <a href="#"><img src="{% static 'img/index/whatsapp.png' %}" alt="WhatsApp"></a>
-                    <a href="#"><img src="{% static 'img/index/gorjeo.png' %}" alt="Twitter"></a>
+                    <a href="#"><img src="{% static 'img/footer/ig.png' %}" alt="Instagram"></a>
+                    <a href="#"><img src="{% static 'img/footer/facebook.png' %}" alt="Facebook"></a>
+                    <a href="#"><img src="{% static 'img/footer/whatsapp.png' %}" alt="WhatsApp"></a>
+                    <a href="#"><img src="{% static 'img/footer/x.png' %}" alt="Twitter"></a>
                 </div>
             </div>
         </div>
