--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    {% block header %}
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -51,12 +52,24 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#contact_btn">Contacto</a>
                   </li>
+                  <li>
+                    <a href="">
+                        <img src="{% static 'img/user.png' %}" alt="Usuario" class="userlogo">
+                    </a>
+                  </li>
                 </ul>
               </div>
             </div>
-          </nav>          
+          </nav>            
+    </header>
+    {% endblock %}
+    
+    <!-- Main content -->
 
-          
+    <main class="main_content">
+
+        {% block content %}
+
         <section class="banner">
             {% block banner %}
             <div class="banner_content">
@@ -67,14 +80,7 @@
                 </div>
             </div>
             {% endblock %}
-        </section>    
-    </header>
-
-    
-    <!-- Main content -->
-
-    <main class="main_content">
-        {% block content %}
+        </section>  
 
         <div class="intro_section">
             <div class="separator"></div>
@@ -86,7 +92,7 @@
             </article>
         </div>
 
-        <!-- Genres -->
+        <!-- Categories -->
 
         <div class="genre-circles">
             <a href="" class="genre-circle">
@@ -123,7 +129,7 @@
             </a>
         </div>        
         
-        <!-- Books -->
+        <!-- Last five books -->
         
         <div class="products_section">
             {% for book in books %}
@@ -135,24 +141,25 @@
               </div>
             {% endfor %}
         </div>
+
         {% endblock %}
     </main>
 
     <!-- Footer -->
-
+    {% block footer %}
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
                 <h4>Contacto</h4>
-                <p>Tel: +54 9 11 1234 5678</p>
-                <p>Email: contacto@libreria.com</p>
+                <p class="details-footer">Tel: +54 9 11 1234 5678</p>
+                <p class="details-footer">Email: contacto@libreria.com</p>
             </div>
             <div class="footer-column">
                 <h4>Enlaces útiles</h4>
                 <ul>
-                    <li><a href="#nosotros">Nosotros</a></li>
-                    <li><a href="#productos">Productos</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="#nosotros" class="items-col">Nosotros</a></li>
+                    <li><a href="#productos" class="items-col">Productos</a></li>
+                    <li><a href="#contacto" class="items-col">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-column">
@@ -169,6 +176,7 @@
             <p>&copy; 2024 Librería. Todos los derechos reservados.</p>
         </div>
     </footer>
+    {% endblock %}
     
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
