--- a/App/templates/pages/visualize.html
+++ b/App/templates/pages/visualize.html
@@ -1,31 +1,29 @@
 {% extends 'index.html' %}
 
 {% load static %}
-
-    {% block visualize %}
-        <img src="{% static 'img/index/products_banner.png' %}" alt="Productos">
-    {% endblock %}
-
-    {% block body %}
-        <div class="products-container">
-            <h1>Lista de Productos</h1>
-            <div class="products_section">
-                {% for book in books %}
-                    <div class="card" style="width: 300px; margin-top: 20px;">
+    {% block content %}
+    <div class="container">
+        <h1 class="my-4">Lista de Productos</h1>
+        <div class="row">
+            {% for book in books %}
+                <div class="col-md-4 col-sm-6 mb-4">
+                    <div class="card">
                         <img src="{{ book.cover_image }}" class="card-img-top" alt="Portada del libro">
                         <div class="card-body">
-                            <h4 class="card-title">Título: {{ book.title }}</h4>
-                            <p class="card-text">Descripción: {{ book.description }}</p>
-                            <p class="card-text">Fecha de publicación: {{ book.publication_date }}</p>
-                            <p class="card-text">ISBN: {{ book.isbn }}</p>
-                            <p class="card-text">Precio: ${{ book.price }}</p>
-                            <p class="card-text">Stock: {{ book.stock }}</p>
-                            <p class="card-text">Autor: {{ book.author.name }}</p>
+                            <h5 class="card-title">{{ book.title }}</h5>
+                            <p class="card-text">{{ book.description }}</p>
+                            <p class="card-text"><strong>Fecha de publicación:</strong> {{ book.publication_date }}</p>
+                            <p class="card-text"><strong>ISBN:</strong> {{ book.isbn }}</p>
+                            <p class="card-text"><strong>Precio:</strong> ${{ book.price }}</p>
+                            <p class="card-text"><strong>Stock:</strong> {{ book.stock }}</p>
+                            <p class="card-text"><strong>Autor:</strong> {{ book.author.name }}</p>
                         </div>
                     </div>
-                {% empty %}
-                    <p>No hay productos disponibles.</p>
-                {% endfor %}
-            </div>
+                </div>
+            {% empty %}
+                <p>No hay productos disponibles.</p>
+            {% endfor %}
         </div>
+    </div>
     {% endblock %}
+
