--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -120,7 +120,7 @@
             </a>
         </div>        
         
-        <!-- Books -->
+        <!-- books -->
         
         <div class="products_section">
             {% for book in books %}
