--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -70,15 +70,43 @@
 
         {% block content %}
 
-        <section class="banner">
+        <section class="banner" >
             {% block banner %}
-            <div class="banner_content">
+            <!-- <div class="banner_content">
                 <img src="{% static 'img/banner.png' %}" alt="Banner" class="banner_image">
                 <div class="banner_text">
                     <h2 class="banner_title">Un nuevo libro, una nueva aventura.</h2>
                     <p class="banner_subtitle">Explora nuestra colección y encuentra historias que inspiran, enseñan y transportan a mundos increíbles.</p>
                 </div>
+            </div> -->
+            <!-- <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                   -->
+            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 95%; margin: auto;">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="{% static 'img/banner1.png' %}" class="d-block w-100" alt="First Banner">
+                        
+                    </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="{% static 'img/banner2.png' %}" class="d-block w-100" alt="Second Banner">
+                        <a href="#" class="btn-banner2">Descubrir más</a>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{% static 'img/banner1.png' %}" class="d-block w-100" alt="Third Banner">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
+            
             {% endblock %}
         </section>  
 
