--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Librería</title>
-    <!-- Hoja de Estilos -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- Hoja de Estilos de Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -52,6 +51,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#contact_btn">Contacto</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="#" class="nav-link">
+                        <i class="fas fa-shopping-cart"></i> 
+                    </a>
+                  </li>
                   <li>
                     <a href="">
                         <img src="{% static 'img/user.png' %}" alt="Usuario" class="userlogo">
@@ -72,40 +76,24 @@
 
         <section class="banner" >
             {% block banner %}
-            <!-- <div class="banner_content">
-                <img src="{% static 'img/banner.png' %}" alt="Banner" class="banner_image">
-                <div class="banner_text">
-                    <h2 class="banner_title">Un nuevo libro, una nueva aventura.</h2>
-                    <p class="banner_subtitle">Explora nuestra colección y encuentra historias que inspiran, enseñan y transportan a mundos increíbles.</p>
-                </div>
-            </div> -->
-            <!-- <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
-                   -->
-            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel" style="width: 95%; margin: auto;">
-                <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="{% static 'img/banner1.png' %}" class="d-block w-100" alt="First Banner">
-                        
-                    </div>
-                    </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="{% static 'img/banner2.png' %}" class="d-block w-100" alt="Second Banner">
-                        <a href="#" class="btn-banner2">Descubrir más</a>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'img/banner1.png' %}" class="d-block w-100" alt="Third Banner">
-                    </div>
+                  <div class="carousel-item active">
+                    <img src="{% static 'img/banner1.png' %}" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="{% static 'img/banner2.png' %}" class="d-block w-100" alt="...">
+                  </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
                 </button>
-            </div>
+              </div>
             
             {% endblock %}
         </section>  
