--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -52,8 +52,8 @@
                     <a class="nav-link" href="#contact_btn">Contacto</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="fas fa-shopping-cart"></i> 
+                    <a href="{% url 'carrito' %}" class="nav-link">
+                        <i class="fas fa-shopping-cart"></i>
                     </a>
                   </li>
                   <li>
