--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -196,6 +196,199 @@ body {
 }
 
 
+/* Contenedor principal */
+.container {
+    width: 80%;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Título de la página */
+.page-title {
+    text-align: center;
+    color: #007bff;
+    font-size: 2em;
+    margin-bottom: 30px;
+}
+
+/* Contenedor de la lista de libros */
+.book-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* Tarjeta de libro */
+.book-card {
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    width: 30%;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+}
+
+/* Efecto hover para las tarjetas */
+.book-card:hover {
+    transform: scale(1.05);
+}
+
+/* Imagen de portada */
+.book-cover {
+    width: 100%;
+    height: auto;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+/* Detalles del libro */
+.book-details {
+    padding: 15px;
+}
+
+/* Título del libro */
+.book-title {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+/* Descripción del libro */
+.book-description {
+    color: #777;
+    margin-bottom: 15px;
+}
+
+/* Información adicional del libro */
+.book-info {
+    color: #555;
+    font-size: 0.9em;
+    margin-bottom: 10px;
+}
+
+/* Precio y stock */
+.book-info strong {
+    color: #333;
+}
+
+/* Mensajes cuando no hay productos */
+p {
+    text-align: center;
+    color: #ff8c00;
+    font-size: 1.2em;
+}
+
+
+
+.container-add {
+    width: 80%;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 8px;
+}
+
+form {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    padding: 20px;
+}
+
+form textarea, form input {
+    border-radius: 20px;
+    margin-bottom: 20px;
+    padding: 12px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 1em;
+    border: none;
+    background-color: #f5f5f5;
+    transition: all 0.3s ease;
+}
+
+/* Efecto de enfoque para los campos de entrada */
+form input:focus, form textarea:focus {
+    border-color: #007bff;
+    background-color: #fff;
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+/* Estilo para la sección del formulario de añadir producto */
+.add-container {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    max-width: 800px;
+    margin: 0 auto;
+    border: 1px solid #f1f1f1;  /* Borde gris claro */
+}
+
+/* Título del formulario */
+.add-container h1 {
+    color: #333;
+    font-size: 2em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+/* Imagen de la sección */
+.add-image {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
+/* Estilos para el formulario */
+.form-group {
+    margin-bottom: 20px;
+}
+
+/* Estilo para los botones */
+.btn {
+    font-size: 1.1em;
+    padding: 12px;
+    border-radius: 20px;
+    cursor: pointer;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border: none;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    border: none;
+    color: white;
+}
+
+.btn-secondary:hover {
+    background-color: #5a6268;
+}
+
+/* Estilo para los mensajes */
+.message {
+    text-align: center;
+    color: #ff0000;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+
 /* Footer */
 .footer {
     background-color: inherit;
